--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CategoryCreateActivity"></activity>
+        <activity android:name=".CategoryManageActivity"></activity>
+        <activity android:name=".ItemManageActivity" />
+        <activity android:name=".CategoryCreateActivity" />
         <activity android:name=".ItemCreateActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity" />
