--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.keyboard">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
@@ -10,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".CategoryManageActivity"></activity>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".CategoryManageActivity" />
         <activity android:name=".ItemManageActivity" />
         <activity android:name=".CategoryCreateActivity" />
         <activity android:name=".ItemCreateActivity" />
