feat: logout 구현
Settingfragment에 logout activity 및 category수정, 비밀번호 변경 버튼 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".feature.SignUp.SignUpActivity"></activity>
+        <activity android:name=".feature.CategoryList.CategoryManageList"></activity>
+        <activity android:name=".feature.SignUp.SignUpActivity" />
         <activity android:name=".feature.Category.CategoryManageActivity" />
         <activity android:name=".feature.Item.ItemManageActivity" />
         <activity android:name=".feature.Category.CategoryCreateActivity" />
